Workshops spacing/bold fix

--- a/src/components/WorkshopSection/WorkshopSection.scss
+++ b/src/components/WorkshopSection/WorkshopSection.scss
@@ -2,7 +2,7 @@
 
 .section {
   padding-top: 0px;
-  margin: 0 auto;
+  margin: 7% auto;
 }
 
 .sectionHeader {
@@ -18,7 +18,6 @@
   text-align: left;
   font-size: $headerXSmall;
   color: $ideateText;
-  font-weight: bold;
 }
 
 .sectionText {
